--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "luktech-md",
   "version": "2.0.0",
+  "description": "LUKTECH Public WhatsApp MD Bot with QR pairing",
   "main": "server.js",
   "type": "commonjs",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "latest",
+    "@whiskeysockets/baileys": "^6.7.8",
     "express": "^4.18.2",
     "pino": "^8.14.1",
-    "openai": "^4.0.0",
+    "qrcode": "^1.5.3",
     "fs-extra": "^11.2.0"
   }
 }
